[gd_scene load_steps=44 format=3 uid="uid://dmpbwgx08n30e"]

[ext_resource type="Script" path="res://scripts/stage2.gd" id="1_0ekds"]
[ext_resource type="TileSet" uid="uid://cig463v134kkq" path="res://scripts/brackyes-bg.tres" id="2_2uw6d"]
[ext_resource type="TileSet" uid="uid://cd3sdlcs1tmgc" path="res://scripts/brackyes.tres" id="3_1kl6l"]
[ext_resource type="Theme" uid="uid://dkmjyg6gujjuu" path="res://scripts/parts_scripts/text_box.tres" id="4_xlq5w"]
[ext_resource type="Script" path="res://scripts/parts_scripts/guide_box.gd" id="5_oseco"]
[ext_resource type="PackedScene" uid="uid://cqwjvljkx3jpt" path="res://scenes/parts_scenes/guide.tscn" id="6_fl3r4"]
[ext_resource type="PackedScene" uid="uid://8cuuv6odub2t" path="res://scenes/parts_scenes/player.tscn" id="7_l53qe"]
[ext_resource type="Script" path="res://scripts/parts_scripts/next_text_box_area.gd" id="8_4d6c1"]
[ext_resource type="PackedScene" uid="uid://dxnhdyk1vmw0f" path="res://scenes/parts_scenes/button.tscn" id="8_6vutc"]
[ext_resource type="Script" path="res://scripts/parts_scripts/gameover_scene_change.gd" id="9_sk2dt"]
[ext_resource type="Script" path="res://scripts/parts_scripts/next_scene_change.gd" id="10_gfpkq"]
[ext_resource type="PackedScene" uid="uid://wxepmw8jf722" path="res://scenes/parts_scenes/map_label.tscn" id="11_aakpp"]
[ext_resource type="PackedScene" uid="uid://y8y1bpfln114" path="res://scenes/parts_scenes/ui_arrow.tscn" id="11_agmp2"]
[ext_resource type="Script" path="res://scripts/parts_scripts/bridge.gd" id="14_ihraq"]
[ext_resource type="Texture2D" uid="uid://t43kfnaukob" path="res://assets/Fire Effect 2/Explosion SpriteSheet.png" id="15_ljafm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5xnh"]
size = Vector2(112, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3rxi"]
size = Vector2(179.25, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr23w"]
size = Vector2(236, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4qq4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy4ho"]
size = Vector2(23.9042, 20)

[sub_resource type="Animation" id="Animation_o2jcl"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(592, 336), Vector2(592, 408)]
}

[sub_resource type="Animation" id="Animation_1x78g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(592, 336)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1wwsu"]
_data = {
"RESET": SubResource("Animation_1x78g"),
"down": SubResource("Animation_o2jcl")
}

[sub_resource type="Animation" id="Animation_ub0rx"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(432, 336), Vector2(432, 216)]
}

[sub_resource type="Animation" id="Animation_5pbqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(432, 336)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahv1l"]
_data = {
"RESET": SubResource("Animation_5pbqd"),
"down": SubResource("Animation_ub0rx")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ea2uv"]
atlas = ExtResource("15_ljafm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7iwf"]
atlas = ExtResource("15_ljafm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10501"]
atlas = ExtResource("15_ljafm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q6h3"]
atlas = ExtResource("15_ljafm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir0td"]
atlas = ExtResource("15_ljafm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6otgl"]
atlas = ExtResource("15_ljafm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exwgo"]
atlas = ExtResource("15_ljafm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8qph"]
atlas = ExtResource("15_ljafm")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk7xr"]
atlas = ExtResource("15_ljafm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj4tk"]
atlas = ExtResource("15_ljafm")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mh0r"]
atlas = ExtResource("15_ljafm")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vcde"]
atlas = ExtResource("15_ljafm")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slgje"]
atlas = ExtResource("15_ljafm")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_poym1"]
atlas = ExtResource("15_ljafm")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3wnc"]
atlas = ExtResource("15_ljafm")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoq5s"]
atlas = ExtResource("15_ljafm")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_54lmy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea2uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7iwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10501")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q6h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir0td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6otgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exwgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8qph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk7xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj4tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mh0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vcde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slgje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poym1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3wnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoq5s")
}],
"loop": false,
"name": &"explosion",
"speed": 15.0
}]

[node name="Stage2" type="Node2D"]
script = ExtResource("1_0ekds")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1288.0
offset_bottom = 744.0
color = Color(0.467794, 0.472543, 0.499755, 1)

[node name="TileMapBack" type="TileMap" parent="."]
tile_set = ExtResource("2_2uw6d")
format = 2
layer_0/tile_data = PackedInt32Array(1835058, 327680, 2, 1048627, 327680, 2, 1048634, 327680, 2)

[node name="TileMapFront" type="TileMap" parent="."]
tile_set = ExtResource("3_1kl6l")
format = 2
layer_0/tile_data = PackedInt32Array(2031667, 262144, 0, 2031668, 262144, 0, 2031669, 262144, 0, 2031670, 262144, 0, 2031671, 262144, 0, 2031672, 262144, 0, 2031673, 262144, 0, 2031674, 262144, 0, 2031675, 262144, 0, 2031676, 262144, 0, 2031677, 262144, 0, 2031678, 262144, 0, 2031679, 262144, 0, 2031680, 262144, 0, 2031681, 262144, 0, 2031682, 262144, 0, 2031683, 262144, 0, 2031684, 262144, 0, 2031685, 262144, 0, 2031686, 262144, 0, 2031687, 262144, 0, 2031688, 262144, 0, 2031689, 262144, 0, 2031690, 262144, 0, 2031691, 262144, 0, 2031692, 262144, 0, 2031693, 262144, 0, 2031694, 262144, 0, 2031695, 262144, 0, 1310799, 262144, 1, 1376335, 262144, 1, 1441871, 262144, 1, 1507407, 262144, 1, 1572943, 262144, 1, 983119, 262144, 1, 1048655, 262144, 1, 1114191, 262144, 1, 1179727, 262144, 1, 1245263, 262144, 1, 196687, 262144, 1, 262223, 262144, 1, 327759, 262144, 1, 393295, 262144, 1, 458831, 262144, 1, 524367, 262144, 1, 589903, 262144, 1, 655439, 262144, 1, 720975, 262144, 1, 786511, 262144, 1, 852047, 262144, 1, 917583, 262144, 1, 2097203, 262144, 1, 2162739, 262144, 1, 2228275, 262144, 1, 2293811, 262144, 1, 2359347, 262144, 1, 2424883, 262144, 1, 2490419, 262144, 1, 2097204, 262144, 1, 2162740, 262144, 1, 2228276, 262144, 1, 2293812, 262144, 1, 2359348, 262144, 1, 2424884, 262144, 1, 2490420, 262144, 1, 2097205, 262144, 1, 2162741, 262144, 1, 2228277, 262144, 1, 2293813, 262144, 1, 2359349, 262144, 1, 2424885, 262144, 1, 2490421, 262144, 1, 2097206, 262144, 1, 2162742, 262144, 1, 2228278, 262144, 1, 2293814, 262144, 1, 2359350, 262144, 1, 2424886, 262144, 1, 2490422, 262144, 1, 2097207, 262144, 1, 2162743, 262144, 1, 2228279, 262144, 1, 2293815, 262144, 1, 2359351, 262144, 1, 2424887, 262144, 1, 2490423, 262144, 1, 2097208, 262144, 1, 2162744, 262144, 1, 2228280, 262144, 1, 2293816, 262144, 1, 2359352, 262144, 1, 2424888, 262144, 1, 2490424, 262144, 1, 2097209, 262144, 1, 2162745, 262144, 1, 2228281, 262144, 1, 2293817, 262144, 1, 2359353, 262144, 1, 2424889, 262144, 1, 2490425, 262144, 1, 2097210, 262144, 1, 2162746, 262144, 1, 2228282, 262144, 1, 2293818, 262144, 1, 2359354, 262144, 1, 2424890, 262144, 1, 2490426, 262144, 1, 2097211, 262144, 1, 2162747, 262144, 1, 2228283, 262144, 1, 2293819, 262144, 1, 2359355, 262144, 1, 2424891, 262144, 1, 2490427, 262144, 1, 2097212, 262144, 1, 2162748, 262144, 1, 2228284, 262144, 1, 2293820, 262144, 1, 2359356, 262144, 1, 2424892, 262144, 1, 2490428, 262144, 1, 2097213, 262144, 1, 2162749, 262144, 1, 2228285, 262144, 1, 2293821, 262144, 1, 2359357, 262144, 1, 2424893, 262144, 1, 2490429, 262144, 1, 2097214, 262144, 1, 2162750, 262144, 1, 2228286, 262144, 1, 2293822, 262144, 1, 2359358, 262144, 1, 2424894, 262144, 1, 2490430, 262144, 1, 2097215, 262144, 1, 2162751, 262144, 1, 2228287, 262144, 1, 2293823, 262144, 1, 2359359, 262144, 1, 2424895, 262144, 1, 2490431, 262144, 1, 2097216, 262144, 1, 2162752, 262144, 1, 2228288, 262144, 1, 2293824, 262144, 1, 2359360, 262144, 1, 2424896, 262144, 1, 2490432, 262144, 1, 2097217, 262144, 1, 2162753, 262144, 1, 2228289, 262144, 1, 2293825, 262144, 1, 2359361, 262144, 1, 2424897, 262144, 1, 2490433, 262144, 1, 2097218, 262144, 1, 2162754, 262144, 1, 2228290, 262144, 1, 2293826, 262144, 1, 2359362, 262144, 1, 2424898, 262144, 1, 2490434, 262144, 1, 2097219, 262144, 1, 2162755, 262144, 1, 2228291, 262144, 1, 2293827, 262144, 1, 2359363, 262144, 1, 2424899, 262144, 1, 2490435, 262144, 1, 2097220, 262144, 1, 2162756, 262144, 1, 2228292, 262144, 1, 2293828, 262144, 1, 2359364, 262144, 1, 2424900, 262144, 1, 2490436, 262144, 1, 2097221, 262144, 1, 2162757, 262144, 1, 2228293, 262144, 1, 2293829, 262144, 1, 2359365, 262144, 1, 2424901, 262144, 1, 2490437, 262144, 1, 2097222, 262144, 1, 2162758, 262144, 1, 2228294, 262144, 1, 2293830, 262144, 1, 2359366, 262144, 1, 2424902, 262144, 1, 2490438, 262144, 1, 2097223, 262144, 1, 2162759, 262144, 1, 2228295, 262144, 1, 2293831, 262144, 1, 2359367, 262144, 1, 2424903, 262144, 1, 2490439, 262144, 1, 2097224, 262144, 1, 2162760, 262144, 1, 2228296, 262144, 1, 2293832, 262144, 1, 2359368, 262144, 1, 2424904, 262144, 1, 2490440, 262144, 1, 2097225, 262144, 1, 2162761, 262144, 1, 2228297, 262144, 1, 2293833, 262144, 1, 2359369, 262144, 1, 2424905, 262144, 1, 2490441, 262144, 1, 2097226, 262144, 1, 2162762, 262144, 1, 2228298, 262144, 1, 2293834, 262144, 1, 2359370, 262144, 1, 2424906, 262144, 1, 2490442, 262144, 1, 2097227, 262144, 1, 2162763, 262144, 1, 2228299, 262144, 1, 2293835, 262144, 1, 2359371, 262144, 1, 2424907, 262144, 1, 2490443, 262144, 1, 2097228, 262144, 1, 2162764, 262144, 1, 2228300, 262144, 1, 2293836, 262144, 1, 2359372, 262144, 1, 2424908, 262144, 1, 2490444, 262144, 1, 2097229, 262144, 1, 2162765, 262144, 1, 2228301, 262144, 1, 2293837, 262144, 1, 2359373, 262144, 1, 2424909, 262144, 1, 2490445, 262144, 1, 2097230, 262144, 1, 2162766, 262144, 1, 2228302, 262144, 1, 2293838, 262144, 1, 2359374, 262144, 1, 2424910, 262144, 1, 2490446, 262144, 1, 2097231, 262144, 1, 2162767, 262144, 1, 2228303, 262144, 1, 2293839, 262144, 1, 2359375, 262144, 1, 2424911, 262144, 1, 2490447, 262144, 1, 1638479, 262144, 1, 1704015, 262144, 1, 1769551, 262144, 1, 2031616, 262144, 0, 2031617, 262144, 0, 2031618, 262144, 0, 2031619, 262144, 0, 2031620, 262144, 0, 2031621, 262144, 0, 2031622, 262144, 0, 2031623, 262144, 0, 2031624, 262144, 0, 2031625, 262144, 0, 2031626, 262144, 0, 2031644, 262144, 1, 2097180, 262144, 1, 2162716, 327680, 1, 2031645, 262144, 1, 2097181, 262144, 1, 2162717, 262144, 1, 2031646, 262144, 1, 2097182, 262144, 1, 2162718, 262144, 1, 2031647, 262144, 1, 2097183, 262144, 1, 2162719, 262144, 1, 2031648, 262144, 1, 2097184, 262144, 1, 2162720, 327680, 1, 2097152, 262144, 1, 2162688, 262144, 1, 2228224, 262144, 1, 2293760, 262144, 1, 2359296, 262144, 1, 2424832, 262144, 1, 2490368, 262144, 1, 2555904, 262144, 1, 2621440, 262144, 1, 2686976, 262144, 1, 2752512, 262144, 1, 2818048, 262144, 1, 2883584, 262144, 1, 2949120, 262144, 1, 2097153, 262144, 1, 2162689, 262144, 1, 2228225, 262144, 1, 2293761, 262144, 1, 2359297, 262144, 1, 2424833, 262144, 1, 2490369, 262144, 1, 2555905, 262144, 1, 2621441, 262144, 1, 2686977, 262144, 1, 2752513, 262144, 1, 2818049, 262144, 1, 2883585, 262144, 1, 2949121, 262144, 1, 2097154, 262144, 1, 2162690, 262144, 1, 2228226, 262144, 1, 2293762, 262144, 1, 2359298, 262144, 1, 2424834, 262144, 1, 2490370, 262144, 1, 2555906, 262144, 1, 2621442, 262144, 1, 2686978, 262144, 1, 2752514, 262144, 1, 2818050, 262144, 1, 2883586, 262144, 1, 2949122, 262144, 1, 2097155, 262144, 1, 2162691, 262144, 1, 2228227, 262144, 1, 2293763, 262144, 1, 2359299, 262144, 1, 2424835, 262144, 1, 2490371, 262144, 1, 2555907, 262144, 1, 2621443, 262144, 1, 2686979, 262144, 1, 2752515, 262144, 1, 2818051, 262144, 1, 2883587, 262144, 1, 2949123, 262144, 1, 2097156, 262144, 1, 2162692, 262144, 1, 2228228, 262144, 1, 2293764, 262144, 1, 2359300, 262144, 1, 2424836, 262144, 1, 2490372, 262144, 1, 2555908, 262144, 1, 2621444, 262144, 1, 2686980, 262144, 1, 2752516, 262144, 1, 2818052, 262144, 1, 2883588, 262144, 1, 2949124, 262144, 1, 2097157, 262144, 1, 2162693, 262144, 1, 2228229, 262144, 1, 2293765, 262144, 1, 2359301, 262144, 1, 2424837, 262144, 1, 2490373, 262144, 1, 2555909, 262144, 1, 2621445, 262144, 1, 2686981, 262144, 1, 2752517, 262144, 1, 2818053, 262144, 1, 2883589, 262144, 1, 2949125, 262144, 1, 2097158, 262144, 1, 2162694, 262144, 1, 2228230, 262144, 1, 2293766, 262144, 1, 2359302, 262144, 1, 2424838, 262144, 1, 2490374, 262144, 1, 2555910, 262144, 1, 2621446, 262144, 1, 2686982, 262144, 1, 2752518, 262144, 1, 2818054, 262144, 1, 2883590, 262144, 1, 2949126, 262144, 1, 2097159, 262144, 1, 2162695, 262144, 1, 2228231, 262144, 1, 2293767, 262144, 1, 2359303, 262144, 1, 2424839, 262144, 1, 2490375, 262144, 1, 2555911, 262144, 1, 2621447, 262144, 1, 2686983, 262144, 1, 2752519, 262144, 1, 2818055, 262144, 1, 2883591, 262144, 1, 2949127, 262144, 1, 2097160, 262144, 1, 2162696, 262144, 1, 2228232, 262144, 1, 2293768, 262144, 1, 2359304, 262144, 1, 2424840, 262144, 1, 2490376, 262144, 1, 2555912, 262144, 1, 2621448, 262144, 1, 2686984, 262144, 1, 2752520, 262144, 1, 2818056, 262144, 1, 2883592, 262144, 1, 2949128, 262144, 1, 2097161, 262144, 1, 2162697, 262144, 1, 2228233, 262144, 1, 2293769, 262144, 1, 2359305, 262144, 1, 2424841, 262144, 1, 2490377, 262144, 1, 2555913, 262144, 1, 2621449, 262144, 1, 2686985, 262144, 1, 2752521, 262144, 1, 2818057, 262144, 1, 2883593, 262144, 1, 2949129, 262144, 1, 2097162, 262144, 1, 2162698, 262144, 1, 2228234, 262144, 1, 2293770, 262144, 1, 2359306, 262144, 1, 2424842, 262144, 1, 2490378, 262144, 1, 2555914, 262144, 1, 2621450, 262144, 1, 2686986, 262144, 1, 2752522, 262144, 1, 2818058, 262144, 1, 2883594, 262144, 1, 2949130, 262144, 1, 2031627, 589824, 1, 2031628, 655360, 1, 2031629, 589824, 1, 2031640, 720896, 1, 2031641, 655360, 1, 2031642, 720896, 1, 2031643, 262144, 1, 2097179, 262144, 1, 2162715, 327680, 1, 2228251, 327680, 1, 2293787, 327680, 1, 2228252, 327680, 1, 2293788, 327680, 1, 2359324, 327680, 1, 2424860, 327680, 1, 2490396, 327680, 1, 2555932, 327680, 1, 2621468, 327680, 1, 2687004, 327680, 1, 2752540, 327680, 1, 2818076, 327680, 1, 2883612, 327680, 1, 2949148, 327680, 1, 3014684, 262144, 1, 3080220, 327680, 1, 2228253, 262144, 1, 2293789, 262144, 1, 2359325, 262144, 1, 2424861, 327680, 1, 2490397, 327680, 1, 2555933, 327680, 1, 2621469, 327680, 1, 2687005, 327680, 1, 2752541, 327680, 1, 2818077, 327680, 1, 2883613, 327680, 1, 2949149, 327680, 1, 3014685, 262144, 1, 3080221, 262144, 1, 2228254, 262144, 1, 2293790, 262144, 1, 2359326, 327680, 1, 2424862, 262144, 1, 2490398, 262144, 1, 2555934, 262144, 1, 2621470, 262144, 1, 2687006, 262144, 1, 2752542, 262144, 1, 2818078, 262144, 1, 2883614, 262144, 1, 2949150, 262144, 1, 3014686, 262144, 1, 3080222, 262144, 1, 2228255, 262144, 1, 2293791, 262144, 1, 2359327, 262144, 1, 2424863, 262144, 1, 2490399, 262144, 1, 2555935, 262144, 1, 2621471, 262144, 1, 2687007, 262144, 1, 2752543, 262144, 1, 2818079, 262144, 1, 2883615, 262144, 1, 2949151, 262144, 1, 3014687, 262144, 1, 3080223, 262144, 1, 2228256, 327680, 1, 2293792, 327680, 1, 2359328, 327680, 1, 2424864, 327680, 1, 2490400, 327680, 1, 2555936, 327680, 1, 2621472, 327680, 1, 2687008, 327680, 1, 2752544, 327680, 1, 2818080, 327680, 1, 2883616, 327680, 1, 2949152, 262144, 1, 3014688, 262144, 1, 3080224, 262144, 1, 2097185, 327680, 1, 2162721, 327680, 1, 2228257, 327680, 1, 2293793, 327680, 1, 2359329, 327680, 1, 2031664, 262144, 0, 2097200, 327680, 1, 2031665, 262144, 0, 2097201, 327680, 1, 2162737, 327680, 1, 2228273, 327680, 1, 2293809, 327680, 1, 2031666, 262144, 0, 2097202, 327680, 1, 2162738, 327680, 1, 2228274, 327680, 1, 2293810, 327680, 1, 2359346, 327680, 1, 2424882, 327680, 1, 2490418, 327680, 1, 2555954, 327680, 1, 1114112, 262144, 1, 1179648, 262144, 1, 1245184, 262144, 1, 1310720, 262144, 1, 1376256, 262144, 1, 1441804, 262144, 0, 1441805, 262144, 0, 1441806, 262144, 0, 1441807, 262144, 0, 1441808, 262144, 0, 1441809, 262144, 0, 1441810, 262144, 0, 1441811, 262144, 0, 1441812, 262144, 0, 1441813, 262144, 0, 1441814, 262144, 0, 1441815, 262144, 0, 1441816, 262144, 0, 1441817, 262144, 0, 1441818, 262144, 0, 1048576, 393216, 0, 1048577, 393216, 0, 1048578, 393216, 0, 1048579, 393216, 0, 1048580, 393216, 0, 1048581, 393216, 0, 1048582, 393216, 0, 1048583, 393216, 0, 1048584, 393216, 0, 1048585, 262144, 0, 1048586, 262144, 0, 1048587, 262144, 0, 1048588, 262144, 0, 1114124, 262144, 1, 1179660, 262144, 1, 1245196, 262144, 1, 1310732, 262144, 1, 1376268, 262144, 1, 1638463, 262144, 0, 1638464, 262144, 0, 1638465, 262144, 0, 1638466, 262144, 0, 1638467, 262144, 0, 1638468, 262144, 0, 1638469, 262144, 0, 1638470, 262144, 0, 1638471, 262144, 0, 1638472, 262144, 0, 1638473, 262144, 0, 1638474, 262144, 0, 1638475, 262144, 0, 1638476, 262144, 0, 1638477, 262144, 0, 1638478, 262144, 0, 2031637, 589824, 1, 2031638, 655360, 1, 2031639, 720896, 1, 2031634, 720896, 1, 2031635, 655360, 1, 2031636, 720896, 1, 2031632, 589824, 1, 2031633, 655360, 1, 2031630, 655360, 1, 2031631, 720896, 1, 2097166, 655360, 1, 2162700, 655360, 1, 2228235, 655360, 1, 2097164, 655360, 1, 2162701, 655360, 1, 2162712, 655360, 1, 2162713, 655360, 1, 2228250, 655360, 1, 2097175, 655360, 1, 2097177, 655360, 1, 1245246, 262144, 0, 1245245, 262144, 0, 1245244, 262144, 0, 1245243, 262144, 0, 1245242, 262144, 0, 1245241, 262144, 0, 1245240, 262144, 0, 1245239, 262144, 0, 1245238, 262144, 0, 1245237, 262144, 0, 1245236, 262144, 0, 1245235, 262144, 0, 1245234, 262144, 0, 1245233, 262144, 0, 1245232, 262144, 0, 1245231, 262144, 0, 720943, 262144, 1, 786479, 262144, 1, 852015, 262144, 1, 917551, 262144, 1, 983087, 262144, 1, 1048623, 262144, 1, 1114159, 262144, 1, 1179695, 262144, 1, 131119, 262144, 1, 196655, 262144, 1, 262191, 262144, 1, 327727, 262144, 1, 393263, 262144, 1, 458799, 262144, 1, 524335, 262144, 1, 589871, 262144, 1, 655407, 262144, 1, 79, 262144, 1, 65615, 262144, 1, 131151, 262144, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_xlq5w")
text = "title"

[node name="Next" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_xlq5w")
text = "Next
"

[node name="GuideBox" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 232.0
offset_bottom = 168.0
script = ExtResource("5_oseco")

[node name="Guide" parent="CanvasLayer/GuideBox" instance=ExtResource("6_fl3r4")]
visible = false
offset_left = -95.0
offset_top = -90.0
offset_right = -55.0
offset_bottom = -50.0

[node name="Timer" type="Timer" parent="CanvasLayer/GuideBox"]
one_shot = true

[node name="Player" parent="." instance=ExtResource("7_l53qe")]
position = Vector2(1208, 496)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-100, -50)
zoom = Vector2(2, 2)

[node name="LookButton" parent="." instance=ExtResource("8_6vutc")]
position = Vector2(808, 496)

[node name="DownButton" parent="." instance=ExtResource("8_6vutc")]
position = Vector2(936, 304)

[node name="DownButton2" parent="." instance=ExtResource("8_6vutc")]
position = Vector2(824, 304)

[node name="TextBoxNext" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="TextBoxNext"]
position = Vector2(808, 488)
scale = Vector2(0.326703, 1.00392)
script = ExtResource("8_4d6c1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextBoxNext/Area2D"]
shape = SubResource("RectangleShape2D_u5xnh")

[node name="Area2D2" type="Area2D" parent="TextBoxNext"]
position = Vector2(1128, 392)
script = ExtResource("8_4d6c1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextBoxNext/Area2D2"]
shape = SubResource("RectangleShape2D_s3rxi")

[node name="Area2D3" type="Area2D" parent="TextBoxNext"]
position = Vector2(168, 32)
script = ExtResource("8_4d6c1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextBoxNext/Area2D3"]
position = Vector2(-6, 456)
shape = SubResource("RectangleShape2D_kr23w")

[node name="SceneChange" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="SceneChange"]
position = Vector2(1496, 448)
script = ExtResource("9_sk2dt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange/Area2D"]
position = Vector2(-200, 8)
scale = Vector2(2.36, 9.24)
shape = SubResource("RectangleShape2D_x4qq4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SceneChange/Area2D"]
position = Vector2(-1480, 8)
scale = Vector2(2.36, 9.24)
shape = SubResource("RectangleShape2D_x4qq4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="SceneChange/Area2D"]
position = Vector2(-825.537, 264)
scale = Vector2(11.5073, 4.75771)
shape = SubResource("RectangleShape2D_xy4ho")

[node name="Area2D2" type="Area2D" parent="SceneChange"]
position = Vector2(96, 168)
script = ExtResource("10_gfpkq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange/Area2D2"]
scale = Vector2(2.36, 9.24)
shape = SubResource("RectangleShape2D_x4qq4")

[node name="Decorations" type="Node" parent="."]

[node name="MapLabel" parent="Decorations" instance=ExtResource("11_aakpp")]
visible = false
offset_left = 960.0
offset_top = 336.0
offset_right = 1110.0
offset_bottom = 437.0
theme_override_font_sizes/font_size = 100
text = ">>>"

[node name="MapLabel2" parent="Decorations" instance=ExtResource("11_aakpp")]
offset_left = 184.0
offset_top = 432.0
offset_right = 334.0
offset_bottom = 533.0
theme_override_colors/font_color = Color(1, 0.346577, 0.280009, 1)
theme_override_font_sizes/font_size = 50
text = "<<<"

[node name="MapLabel3" parent="Decorations" instance=ExtResource("11_aakpp")]
offset_left = 80.0
offset_top = 432.0
offset_right = 230.0
offset_bottom = 533.0
theme_override_colors/font_color = Color(1, 0.346577, 0.280009, 1)
theme_override_font_sizes/font_size = 50
text = "<<<"

[node name="Arrow" type="Node" parent="."]

[node name="Arrow" parent="Arrow" instance=ExtResource("11_agmp2")]
position = Vector2(592, 336)

[node name="StaticBody2D" parent="Arrow/Arrow" index="0"]
collision_layer = 2

[node name="CollisionShape2D" parent="Arrow/Arrow/StaticBody2D" index="0"]
position = Vector2(76.1567, 64)

[node name="Label" parent="Arrow/Arrow/StaticBody2D" index="1"]
theme_override_font_sizes/font_size = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow/Arrow"]
libraries = {
"": SubResource("AnimationLibrary_1wwsu")
}

[node name="Arrow2" parent="Arrow" instance=ExtResource("11_agmp2")]
position = Vector2(432, 336)

[node name="StaticBody2D" parent="Arrow/Arrow2" index="0"]
collision_layer = 2

[node name="CollisionShape2D" parent="Arrow/Arrow2/StaticBody2D" index="0"]
position = Vector2(76.1567, 52.3165)

[node name="Label" parent="Arrow/Arrow2/StaticBody2D" index="1"]
theme_override_font_sizes/font_size = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow/Arrow2"]
libraries = {
"": SubResource("AnimationLibrary_ahv1l")
}

[node name="Bridge" type="Node2D" parent="."]
script = ExtResource("14_ihraq")

[node name="BridgeTile" type="TileMap" parent="Bridge"]
tile_set = ExtResource("2_2uw6d")
format = 2
layer_0/tile_data = PackedInt32Array(2031649, 589824, 2, 2031650, 655360, 2, 2031651, 589824, 2, 2031652, 655360, 2, 2031653, 720896, 2, 2031654, 589824, 2, 2031655, 655360, 2, 2031656, 589824, 2, 2031657, 655360, 2, 2031658, 720896, 2, 2031659, 589824, 2, 2031660, 589824, 2, 2031661, 589824, 2, 2031662, 655360, 2, 2031663, 720896, 2)

[node name="Explosion" type="AnimatedSprite2D" parent="Bridge"]
position = Vector2(576, 488)
sprite_frames = SubResource("SpriteFrames_54lmy")
animation = &"explosion"
frame_progress = 0.54715

[node name="Explosion2" type="AnimatedSprite2D" parent="Bridge"]
position = Vector2(648, 496)
sprite_frames = SubResource("SpriteFrames_54lmy")
animation = &"explosion"

[node name="Explosion3" type="AnimatedSprite2D" parent="Bridge"]
position = Vector2(728, 488)
sprite_frames = SubResource("SpriteFrames_54lmy")
animation = &"explosion"

[editable path="Arrow/Arrow"]
[editable path="Arrow/Arrow2"]
